crates/serde-feather/tests/ui/field_skip_with_value.stderr
error: serde field attribute `skip` does not accept a value
 --> tests/ui/field_skip_with_value.rs:5:13
  |
5 |     #[serde(skip = true)]
  |             ^^^^
