crates/serde-feather/tests/ui/field_skip_with_value.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
struct SkipWithValueField {
    #[serde(skip = true)]
    value: u8,
}

fn main() {}
